--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid80" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
-  <package id="NodaTime" version="2.2.3" targetFramework="monoandroid80" />
-  <package id="SQLiteNetExtensions" version="2.0.0-alpha2" targetFramework="monoandroid80" />
-  <package id="SQLiteNetExtensions.Async" version="2.0.0-alpha2" targetFramework="monoandroid80" />
+  <package id="NodaTime" version="2.2.4" targetFramework="monoandroid80" />
+  <package id="SQLiteNetExtensions" version="2.0.0" targetFramework="monoandroid80" />
+  <package id="SQLiteNetExtensions.Async" version="2.0.0" targetFramework="monoandroid80" />
   <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid80" />
@@ -46,18 +46,18 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Runtime.Serialization.Xml" version="4.1.1" targetFramework="monoandroid80" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid80" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
