--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -212,6 +212,7 @@
     <Compile Include="WeatherData\IWeatherProviderImpl.cs" />
     <Compile Include="WeatherData\WeatherProviderImpl.cs" />
     <Compile Include="WeatherNowFragment.cs" />
+    <Compile Include="Widgets\WeatherWidgetConfigActivity.cs" />
     <Compile Include="Widgets\WeatherWidgetProvider.cs" />
     <Compile Include="Widgets\WeatherWidgetService.cs" />
   </ItemGroup>
