--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -6,6 +6,11 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
+  <uses-permission
+       android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+       android:maxSdkVersion="18" />
+  <uses-permission
+       android:name="com.android.alarm.permission.SET_ALARM"
+       android:maxSdkVersion="18" />
+<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
 </manifest>
