--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -1,16 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather" android:installLocation="auto" android:versionCode="22" android:versionName="1.1.1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather" android:installLocation="auto" android:versionCode="23" android:versionName="1.2.0">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-  <uses-permission
-       android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-       android:maxSdkVersion="18" />
-  <uses-permission
-       android:name="com.android.alarm.permission.SET_ALARM"
-       android:maxSdkVersion="18" />
-<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
+	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" android:maxSdkVersion="18" />
+	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
 </manifest>
