SimpleWeather.Wear: make some UI adjustments
* Add WearableNavigationDrawerView to MainActivity
* Split WeatherNow into multiple fragments for navigation
* Add icons for drawers

--- a/SimpleWeather.Wear/packages.config
+++ b/SimpleWeather.Wear/packages.config
@@ -72,6 +72,7 @@
   <package id="Xamarin.Android.Support.v14.Preference" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v4" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.Preference" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
