--- a/SimpleWeather.Droid.Shared/SimpleWeather.Droid.Shared.csproj
+++ b/SimpleWeather.Droid.Shared/SimpleWeather.Droid.Shared.csproj
@@ -478,6 +478,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-nodpi\openweathermap.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-anydpi-v21\ic_error_white.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
