--- a/SimpleWeather.Wear/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Wear/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="24" android:versionName="1.2.1" package="com.thewizrd.simpleweather" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="24" android:versionName="1.2.1" package="com.thewizrd.simpleweather_debug" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="27" />
 	<uses-feature android:name="android.hardware.type.watch" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
