--- a/SimpleWeather.Wear/SimpleWeather.Wear.csproj
+++ b/SimpleWeather.Wear/SimpleWeather.Wear.csproj
@@ -142,6 +142,9 @@
     <Reference Include="Xamarin.Android.Support.v7.AppCompat, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Android.Support.v7.AppCompat.27.0.2\lib\MonoAndroid81\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.CardView, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xamarin.Android.Support.v7.CardView.27.0.2\lib\MonoAndroid81\Xamarin.Android.Support.v7.CardView.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Android.Support.v7.Preference, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Android.Support.v7.Preference.27.0.2\lib\MonoAndroid81\Xamarin.Android.Support.v7.Preference.dll</HintPath>
     </Reference>
@@ -182,7 +185,9 @@
     <Compile Include="Controls\HourlyForecastItem.cs" />
     <Compile Include="Controls\LocationQuery.cs" />
     <Compile Include="Controls\TextForecastItem.cs" />
+    <Compile Include="Controls\WeatherAlertPanel.cs" />
     <Compile Include="Helpers\ActionModeCallback.cs" />
+    <Compile Include="Helpers\IWeatherViewLoadedListener.cs" />
     <Compile Include="Helpers\SwipeDismissCallback.cs" />
     <Compile Include="LaunchActivity.cs" />
     <Compile Include="LocationSearchFragment.cs" />
@@ -192,6 +197,9 @@
     <Compile Include="SettingsActivity.cs" />
     <Compile Include="SetupActivity.cs" />
     <Compile Include="SwipeDismissFragment.cs" />
+    <Compile Include="WeatherDetailsFragment.cs" />
+    <Compile Include="WeatherForecastFragment.cs" />
+    <Compile Include="WeatherAlertsFragment.cs" />
     <Compile Include="WeatherNowFragment.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -300,6 +308,30 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\colors.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_access_time_black_24dp.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_edit_location_black_24dp.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_list_black_24dp.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\weather_alert_panel.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_weather_alerts.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_weather_details.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_weather_forecast.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_date_range_black_24dp.xml" />
+  </ItemGroup>
   <Import Project="..\SimpleWeather\SimpleWeather_Xamarin.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -337,6 +369,7 @@
     <Error Condition="!Exists('..\packages\Xamarin.Android.Support.v14.Preference.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v14.Preference.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.v14.Preference.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v14.Preference.targets'))" />
     <Error Condition="!Exists('..\packages\Xamarin.Android.Support.Wear.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Wear.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.Wear.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Wear.targets'))" />
     <Error Condition="!Exists('..\packages\Xamarin.GooglePlayServices.Maps.60.1142.0\build\MonoAndroid80\Xamarin.GooglePlayServices.Maps.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.GooglePlayServices.Maps.60.1142.0\build\MonoAndroid80\Xamarin.GooglePlayServices.Maps.targets'))" />
+    <Error Condition="!Exists('..\packages\Xamarin.Android.Support.v7.CardView.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v7.CardView.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.v7.CardView.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v7.CardView.targets'))" />
   </Target>
   <Import Project="..\packages\Xamarin.Android.Arch.Core.Common.1.0.0\build\MonoAndroid80\Xamarin.Android.Arch.Core.Common.targets" Condition="Exists('..\packages\Xamarin.Android.Arch.Core.Common.1.0.0\build\MonoAndroid80\Xamarin.Android.Arch.Core.Common.targets')" />
   <Import Project="..\packages\NETStandard.Library.2.0.1\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.1\build\netstandard2.0\NETStandard.Library.targets')" />
@@ -375,4 +408,5 @@
   <Import Project="..\packages\Xamarin.Android.Support.v14.Preference.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v14.Preference.targets" Condition="Exists('..\packages\Xamarin.Android.Support.v14.Preference.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v14.Preference.targets')" />
   <Import Project="..\packages\Xamarin.Android.Support.Wear.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Wear.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Wear.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Wear.targets')" />
   <Import Project="..\packages\Xamarin.GooglePlayServices.Maps.60.1142.0\build\MonoAndroid80\Xamarin.GooglePlayServices.Maps.targets" Condition="Exists('..\packages\Xamarin.GooglePlayServices.Maps.60.1142.0\build\MonoAndroid80\Xamarin.GooglePlayServices.Maps.targets')" />
+  <Import Project="..\packages\Xamarin.Android.Support.v7.CardView.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v7.CardView.targets" Condition="Exists('..\packages\Xamarin.Android.Support.v7.CardView.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.v7.CardView.targets')" />
 </Project>
