SimpleWeather.Droid: initial support for syncing data with connected device

--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -4,15 +4,15 @@
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
-  <package id="NodaTime" version="2.2.4" targetFramework="monoandroid80" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid81" />
+  <package id="NodaTime" version="2.2.5" targetFramework="monoandroid81" />
   <package id="SQLiteNetExtensions" version="2.0.0" targetFramework="monoandroid80" />
   <package id="SQLiteNetExtensions.Async" version="2.0.0" targetFramework="monoandroid80" />
   <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.9" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.10" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.core" version="1.1.10" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.10" targetFramework="monoandroid81" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.10" targetFramework="monoandroid81" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid80" />
@@ -74,6 +74,7 @@
   <package id="Xamarin.Android.Support.Design" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Fragment" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Percent" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Transition" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v14.Preference" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v4" version="27.0.2" targetFramework="monoandroid81" />
@@ -83,5 +84,10 @@
   <package id="Xamarin.Android.Support.v7.Preference" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Wear" version="2.2.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Build.Download" version="0.4.9" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Wearable" version="60.1142.1" targetFramework="monoandroid81" />
 </packages>
