--- a/SimpleWeather.Wear/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Wear/Properties/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="26" android:versionName="1.3.0" package="com.thewizrd.simpleweather" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="26" android:versionName="1.3.0" package="com.thewizrd.simpleweather_debug" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="27" />
 	<uses-feature android:name="android.hardware.type.watch" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="@string/app_name" android:theme="@style/WearAppTheme.Launcher"></application>
+  <application android:label="@string/app_name" android:theme="@style/WearAppTheme.Launcher">
+    <activity
+        android:name="android.support.wearable.activity.ConfirmationActivity">
+    </activity>
+  </application>
 </manifest>
