Wear: minor updates
* WeatherNow: Properly stop the timer beforehand
* Remove settings for "sync when available" (don't feel its necessary)
* Sync only: disable settings that are synced
* Increase update interval for all devices
* Update dialog style in SetupActivity
* Add a few comments

--- a/SimpleWeather.Wear/SimpleWeather.Wear.csproj
+++ b/SimpleWeather.Wear/SimpleWeather.Wear.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Controls\LocationQuery.cs" />
     <Compile Include="Controls\TextForecastItem.cs" />
     <Compile Include="Controls\WeatherAlertPanel.cs" />
+    <Compile Include="Helpers\AcceptDenyDialogBuilder.cs" />
     <Compile Include="Helpers\ActionModeCallback.cs" />
     <Compile Include="Helpers\ConfirmationResultReceiver.cs" />
     <Compile Include="Helpers\IWeatherViewLoadedListener.cs" />
