Wear: add watch face complication support

--- a/SimpleWeather.Wear/SimpleWeather.Wear.csproj
+++ b/SimpleWeather.Wear/SimpleWeather.Wear.csproj
@@ -209,6 +209,7 @@
     <Compile Include="SwipeDismissFragment.cs" />
     <Compile Include="Utils\Settings.cs" />
     <Compile Include="Wearable\WearableDataListenerService.cs" />
+    <Compile Include="Wearable\WeatherComplicationService.cs" />
     <Compile Include="WeatherDetailsFragment.cs" />
     <Compile Include="WeatherListFragment.cs" />
     <Compile Include="WeatherNowFragment.cs" />
