UWP: add support for secondary tiles
* Allow pinning tiles for all locations

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -233,6 +233,7 @@
     </Compile>
     <Compile Include="Helpers\ICommandBarPage.cs" />
     <Compile Include="Helpers\InverseVisibilityConverter.cs" />
+    <Compile Include="Helpers\SecondaryTileUtils.cs" />
     <Compile Include="WeatherAlertPage.xaml.cs">
       <DependentUpon>WeatherAlertPage.xaml</DependentUpon>
     </Compile>
