--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -8,5 +8,8 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
 	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" android:maxSdkVersion="18" />
-	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
+	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme">
+    <receiver android:enabled="@bool/enable_alertnotifservice" android:exported="@bool/enable_alertnotifservice" android:name="com.thewizrd.simpleweather_debug.WeatherNotificationBroadcastReceiver" />
+    <service android:enabled="@bool/enable_alertnotifservice" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" android:name="com.thewizrd.simpleweather_debug.WeatherAlertNotificationService" />
+  </application>
 </manifest>
