--- a/SimpleWeather.UWP/project.json
+++ b/SimpleWeather.UWP/project.json
@@ -5,6 +5,8 @@
     "Microsoft.Toolkit.Uwp.Notifications": "2.2.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "2.1.1",
     "Newtonsoft.Json": "11.0.2",
+    "NLog": "4.5.6",
+    "NLog.Schema": "4.5.6",
     "NodaTime": "2.2.6",
     "QueryString.NET": "1.0.0",
     "sqlite-net-pcl": "1.5.166-beta",
